# pcms

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
pcms/: __init__.py  approval.py  cli.py  config.py  db.py  mcp_server.py  md_builder.py  models.py  search.py  staleness.py
pcms/importers/: __init__.py  base.py  chatgpt.py  claude.py  manual.py
